--- a/milestone_reader/templates/base.html
+++ b/milestone_reader/templates/base.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-{% templatetag openblock %} load staticfiles {% templatetag closeblock %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% templatetag openblock %} block title {% templatetag closeblock %}milestone_reader{% templatetag openblock %} endblock title {% templatetag closeblock %}</title>
+    <title>{{ page_title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="{% templatetag openblock %} static 'css/bootstrap.min.css' {% templatetag closeblock %}" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
     <style>
       body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+    /*    padding-top: 60px;/* /* 60px to make the container go all the way to the bottom of the topbar */
+        
       }
     </style>
 
@@ -22,44 +22,24 @@
     <![endif]-->
 
     <!-- This file store project specific CSS -->
-    <link href="{% templatetag openblock %} static 'css/milestone_reader.css' {% templatetag closeblock %}" rel="stylesheet">
+    <link href="{ STATIC_URL }}css/milestone_reader.css" rel="stylesheet">
 
     <!-- Use this to quickly test CSS changes in a template,
         then move to milestone_reader.css -->
-    {% templatetag openblock %} block extra_css {% templatetag closeblock %}{% templatetag openblock %} endblock extra_css {% templatetag closeblock %}
+    {% block extra_css %}{% endblock %}
   </head>
 
   <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Milestone Reader</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-              <!--
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            -->
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+    {#% include "base_navbar.html" %#}
+   
 
     <div class="container">
 
-      <h1>{% templatetag openblock %} block page_title {% templatetag closeblock %}Example Base Template{% templatetag openblock %} endblock page_title {% templatetag closeblock %}</h1>
+      <h3>{{ page_title }}</h3>
 
-      {% templatetag openblock %} block content {% templatetag closeblock %}
+      {% block content %}
         <p>Use this document as a way to quick start any new project.</p>
-      {% templatetag openblock %} endblock content {% templatetag closeblock %}
+      {% endblock %}
 
     </div> <!-- /container -->
 
@@ -67,11 +47,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="{% templatetag openblock %} static 'js/bootstrap.min.js' {% templatetag closeblock %}"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
 
     <!-- place project specific Javascript in this file -->
-    <script src="{% templatetag openblock %} static 'js/milestone_reader.js' {% templatetag closeblock %}"></script>
+    <script src="{{ STATIC_URL }}js/milestone_reader.js"></script>
 
-    {% templatetag openblock %} block extra_js {% templatetag closeblock %}{% templatetag openblock %} endblock extra_js {% templatetag closeblock %}
   </body>
 </html>
