--- a/milestone_reader/templates/milestones/view_by_column.html
+++ b/milestone_reader/templates/milestones/view_by_column.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 <!-- START: CONTENT -->{% block content %}
-<br /><br /><b>{{ milestone_count }}</b> milestone{{ milestone_count|pluralize }} found.
+<br /><br /><b>{{ milestone_count }}</b> open milestone{{ milestone_count|pluralize }} found.
 
-<table class="table table-bordered table-condensed">
+<table class="table xtable-bordered table-condensed">
     <thead>
         <tr>
             <th>Month</th>
@@ -15,21 +15,31 @@
     <tr>
         {% for month_milestone_info in org_month %}
             {% if forloop.first %}
-                <td>{% if month_milestone_info.month == NO_DUE_DATE %}
-                        <span class="badge">no due date</span>
+                <td>
+                    <div>
+                        {% if month_milestone_info.month == NO_DUE_DATE %}
+                        <span class="label label-primary">no due date</span>
                     {% else %}
-                        <span class="badge">{{ month_milestone_info.month|date:"M Y" }}</span>
+                        <span class="label label-primary">{{ month_milestone_info.month|date:"M Y" }}</span>
                     {% endif %}
+                    </div>
                 </td>
             {% endif %}
             <td width="33%">{% for ms in month_milestone_info.milestones %}
-                    <div class="well">
+                    <div class="well well-sm">
                         {% if ms.due_on %}
-                         <span class="badge">{{ ms.due_on|date:"M j" }}</span>
+                         <span class="label label-info">{{ ms.due_on|date:"M j" }}</span>
                         {% else %}
-                         <span class="badge">no due date</span>
+                         <span class="label label-info">no due date</span>
                         {% endif %}
                         <br /><a href="{{ ms. }}" xclass="btn btn-info btn-sm">{{ ms.title }}</a>
+                        {% if ms.description %}
+                            <p>{{ ms.description }}
+                            <br />
+                <br />open issues: <a href="{{ ms.get_view_open_issues_url }}">{{ ms.open_issues }}</a>
+                <br />closed issues: <a href="{{ ms.get_view_closed_issues_url }}">{{ ms.closed_issues }}</a>
+                            </p>
+                        {% endif %}
                     </div>
 
 
