links to sample views

--- a/milestone_reader/templates/milestones/view_by_due_date.html
+++ b/milestone_reader/templates/milestones/view_by_due_date.html
@@ -11,7 +11,7 @@
 {% endfor %}
 
 {% if not milestones %}
-No milestones found
+<h3>No milestones found</h3>
 {% endif %}
 {% if milestones %}
 {% if chosen_repository %}
