--- a/milestone_reader/templates/milestones/view_by_column.html
+++ b/milestone_reader/templates/milestones/view_by_column.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{#% load markup %#}
 <!-- START: CONTENT -->{% block content %}
 <br /><br /><b>{{ milestone_count }}</b> open milestone{{ milestone_count|pluralize }} found.
 
@@ -33,13 +34,14 @@
                          <span class="label label-info">no due date</span>
                         {% endif %}
                         <br /><a href="{{ ms. }}" xclass="btn btn-info btn-sm">{{ ms.title }}</a>
-                        {% if ms.description %}
-                            <p>{{ ms.description }}
-                            <br />
-                <br />open issues: <a href="{{ ms.get_view_open_issues_url }}">{{ ms.open_issues }}</a>
+                        {% if ms.markdown_description %}
+                            <br />{{ ms.markdown_description|safe }}
+                        {% else %}{% if ms.description %}
+                                <br />{{ ms.description }}
+                        {% endif %}{% endif %}
+                open issues: <a href="{{ ms.get_view_open_issues_url }}">{{ ms.open_issues }}</a>
                 <br />closed issues: <a href="{{ ms.get_view_closed_issues_url }}">{{ ms.closed_issues }}</a>
-                            </p>
-                        {% endif %}
+                            
                     </div>
 
 
