--- a/milestone_reader/templates/milestones/view_by_due_date.html
+++ b/milestone_reader/templates/milestones/view_by_due_date.html
@@ -36,10 +36,14 @@
         {% endifchanged %}
         <td>
             <b><a href="{{ ms.get_view_open_issues_url }}">{{ ms.title }}</a></b>
-            <p>{{ ms.description }}
-                <br /><b>open issues:</b> <a href="{{ ms.get_view_open_issues_url }}">{{ ms.open_issues }}</a>
+             {% if ms.markdown_description %}
+                    <br />{{ ms.markdown_description|safe }}
+                {% else %}{% if ms.description %}
+                        <br />{{ ms.description }}
+                {% endif %}{% endif %}
+                <b>open issues:</b> <a href="{{ ms.get_view_open_issues_url }}">{{ ms.open_issues }}</a>
                 <br /><b>closed issues:</b> <a href="{{ ms.get_view_closed_issues_url }}">{{ ms.closed_issues }}</a>
-            </p>
+            
         </td>
         <td>
             {% if ms.due_on %}
