remove line spacing

--- a/milestone_reader/templates/milestones/view_by_column.html
+++ b/milestone_reader/templates/milestones/view_by_column.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
-{#% load markup %#}
 <!-- START: CONTENT -->{% block content %}
-<br /><br /><b>{{ milestone_count }}</b> open milestone{{ milestone_count|pluralize }} found.
+<b>{{ milestone_count }}</b> open milestone{{ milestone_count|pluralize }} found.
 
 <table class="table xtable-bordered table-condensed">
     <thead>
