--- a/milestone_reader/templates/500.html
+++ b/milestone_reader/templates/500.html
@@ -1,1 +1,56 @@
-<h1>Whoops!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>IQSS Data Science Milestones - 500 Error</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <style>
+      html, body, #map-canvas {
+        height: 100%;
+        margin: 0px;
+        padding: 0px
+      }
+    </style>
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="/static/css/structure.css">
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+	<!-- Navbar Panel -->
+    <nav id="navbarFixed" class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <span class="navbar-brand">IQSS Data Science Milestones</span>
+            </div>
+			<div class="collapse navbar-collapse" id="topNavBar">
+				<ul class="nav navbar-nav navbar-right">
+              
+                   
+                </ul>
+			</div>
+		</div>
+	</nav>
+    <!-- Header Panel -->
+    <div id="dataverseHeader" class="container" style="background:#F5F5F5;">
+        <div class="dataverseHeaderBlock">
+                <div class="dataverseHeaderCell dataverseHeaderName">	                   
+					<p><span style="font-size: 1.3em; color:inheret;">Sorry! An Error Occurred (500 Error)</span></p>
+						<p>Please return to the <a href="http://http://datascience.iq.harvard.edu">Data Science Site</a>.</p>
+
+					<!--
+						<p>Please return to the <a href="http://dataverse-demo.iq.harvard.edu/">Dataverse Beta Site</a>.</p>
+                    -->        
+                </div>
+        </div>
+    </div>
+	<div class="container">
+		
+		
+	</div>
+  </body>
+</html>
+
