--- a/milestone_reader/templates/base.html
+++ b/milestone_reader/templates/base.html
@@ -22,7 +22,7 @@
     <![endif]-->
 
     <!-- This file store project specific CSS -->
-    <link href="{ STATIC_URL }}css/milestone_reader.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/milestone_reader.css" rel="stylesheet">
 
     <!-- Use this to quickly test CSS changes in a template,
         then move to milestone_reader.css -->
