--- a/milestone_reader/static/css/milestone_reader.css
+++ b/milestone_reader/static/css/milestone_reader.css
@@ -1,1 +1,6 @@
-/*! project specific CSS goes here. */
+/*div.container hr.ms_hr { color:#333;}
+
+hr { display: block; height: 1px;
+    border: 0; border-top: 1px solid #333 ;
+    margin: 1em 0; padding: 0; }
+*/
