--- a/milestone_reader/templates/milestones/view_by_column.html
+++ b/milestone_reader/templates/milestones/view_by_column.html
@@ -25,18 +25,28 @@
                     </div>
                 </td>
             {% endif %}
-            <td width="33%">{% for ms in month_milestone_info.milestones %}
+            <td width="20%">{% for ms in month_milestone_info.milestones %}
+                   {% if ms.repository.parent_repository %}
+                     <div class="well well-sm" style="background-color:#edf3fe;">
+                    {% else %}
                     <div class="well well-sm">
+
+                    {% endif %}
                         {% if ms.due_on %}
                          <span class="label label-info">{{ ms.due_on|date:"M j" }}</span>
+                            {% if ms.repository.parent_repository %}
+                                <span class="label label-success">{{ ms.repository }}</span>
+                            {% endif %}
                         {% else %}
                          <span class="label label-info">no due date</span>
                         {% endif %}
-                        <br /><a href="{{ ms.get_view_open_issues_url }}" xclass="btn btn-info btn-sm">{{ ms.title }}</a>
+                       <br /><a href="{{ ms.get_view_open_issues_url }}" xclass="btn btn-info btn-sm">{{ ms.title }}</a>
+
+                        <hr style="background-color:#006699;" />
                         {% if ms.markdown_description %}
-                            <br />{{ ms.markdown_description|safe }}
+                            {{ ms.markdown_description|safe }}
                         {% else %}{% if ms.description %}
-                                <br />{{ ms.description }}
+                            {{ ms.description|linebreaksbr }}
                         {% endif %}{% endif %}
                 open issues: <a href="{{ ms.get_view_open_issues_url }}">{{ ms.open_issues }}</a>
                 <br />closed issues: <a href="{{ ms.get_view_closed_issues_url }}">{{ ms.closed_issues }}</a>
