--- a/milestone_reader/templates/404.html
+++ b/milestone_reader/templates/404.html
@@ -9,6 +9,8 @@
         height: 100%;
         margin: 0px;
         padding: 0px
+        padding-top: 60px;/*  60px to make the container go all the way to the bottom of the topbar */
+
       }
     </style>
 
@@ -39,7 +41,7 @@
         <div class="dataverseHeaderBlock">
                 <div class="dataverseHeaderCell dataverseHeaderName">	                   
 					<p><span style="font-size: 1.3em; color:inheret;">Sorry! Page Not Found (404 Error)</span></p>
-						<p>Please return to the <a href="http://http://datascience.iq.harvard.edu">Data Science Site</a>.</p>
+						<p>Please return to the <a href="http://datascience.iq.harvard.edu">Data Science Site</a>.</p>
 
 					<!--
 						<p>Please return to the <a href="http://dataverse-demo.iq.harvard.edu/">Dataverse Beta Site</a>.</p>
