--- a/milestone_reader/templates/500.html
+++ b/milestone_reader/templates/500.html
@@ -8,7 +8,7 @@
       html, body, #map-canvas {
         height: 100%;
         margin: 0px;
-        padding: 0px
+        padding-top: 60px;
       }
     </style>
 
@@ -39,7 +39,7 @@
         <div class="dataverseHeaderBlock">
                 <div class="dataverseHeaderCell dataverseHeaderName">	                   
 					<p><span style="font-size: 1.3em; color:inheret;">Sorry! An Error Occurred (500 Error)</span></p>
-						<p>Please return to the <a href="http://http://datascience.iq.harvard.edu">Data Science Site</a>.</p>
+						<p>Please return to the <a href="http://datascience.iq.harvard.edu">Data Science Site</a>.</p>
 
 					<!--
 						<p>Please return to the <a href="http://dataverse-demo.iq.harvard.edu/">Dataverse Beta Site</a>.</p>
