css padding update

--- a/milestone_reader/templates/404.html
+++ b/milestone_reader/templates/404.html
@@ -8,8 +8,7 @@
       html, body, #map-canvas {
         height: 100%;
         margin: 0px;
-        padding: 0px
-        padding-top: 60px;/*  60px to make the container go all the way to the bottom of the topbar */
+        padding-top: 60px;
 
       }
     </style>
