--- a/milestone_reader/templates/404.html
+++ b/milestone_reader/templates/404.html
@@ -49,8 +49,11 @@
         </div>
     </div>
 	<div class="container">
-		
-		
+		<div class="well well-sm" style="background-color:#f5f5f5;">
+		<p><span style="font-size: 1.3em; color:inheret;">Sorry! Page Not Found (404 Error)</span></p>
+						<p>Please return to the <a href="http://datascience.iq.harvard.edu">Data Science Site</a>.</p>
+
+        </div>
 	</div>
   </body>
 </html>
