--- a/milestone_reader/templates/500.html
+++ b/milestone_reader/templates/500.html
@@ -34,21 +34,13 @@
 			</div>
 		</div>
 	</nav>
-    <!-- Header Panel -->
-    <div id="dataverseHeader" class="container" style="background:#F5F5F5;">
-        <div class="dataverseHeaderBlock">
-                <div class="dataverseHeaderCell dataverseHeaderName">	                   
-					<p><span style="font-size: 1.3em; color:inheret;">Sorry! An Error Occurred (500 Error)</span></p>
+
+	<div class="container">
+				<div class="well well-sm" style="background-color:#f5f5f5;">
+                	<p><span style="font-size: 1.3em; color:inheret;">Sorry! An Error Occurred (500 Error)</span></p>
 						<p>Please return to the <a href="http://datascience.iq.harvard.edu">Data Science Site</a>.</p>
 
-					<!--
-						<p>Please return to the <a href="http://dataverse-demo.iq.harvard.edu/">Dataverse Beta Site</a>.</p>
-                    -->        
                 </div>
-        </div>
-    </div>
-	<div class="container">
-		
 		
 	</div>
   </body>
