--- a/milestone_reader/templates/milestones/view_by_column.html
+++ b/milestone_reader/templates/milestones/view_by_column.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 <!-- START: CONTENT -->{% block content %}
-<b>{{ milestone_count }}</b> open milestone{{ milestone_count|pluralize }} found.
-
+<p>
+    <b>{{ milestone_count }}</b> open milestone{{ milestone_count|pluralize }} found.
+        Issues: <b>{{ num_open_issues }}</b> open.  <b>{{ num_closed_issues }}</b> closed.
+</p>
 <table class="table xtable-bordered table-condensed">
     <thead>
         <tr>
