--- a/milestone_reader/templates/milestones/view_single_repo_column2.html
+++ b/milestone_reader/templates/milestones/view_single_repo_column2.html
@@ -17,7 +17,10 @@
 </div>
 
 <div>
-    <p><br /><b>{{ milestone_count }}</b> open milestone{{ milestone_count|pluralize }} found.</p>
+    <p><br /><b>{{ milestone_count }}</b> open milestone{{ milestone_count|pluralize }} found.
+        Issues: <b>{{ num_open_issues }}</b> open.  <b>{{ num_closed_issues }}</b> closed.
+    </p>
+
 </div>
 
 
