--- a/milestone_reader/templates/milestones/view_single_repo_column2.html
+++ b/milestone_reader/templates/milestones/view_single_repo_column2.html
@@ -19,6 +19,7 @@
 <div>
     <p><br /><b>{{ milestone_count }}</b> open milestone{{ milestone_count|pluralize }} found.
         Issues: <b>{{ num_open_issues }}</b> open.  <b>{{ num_closed_issues }}</b> closed.
+        {% if chosen_repository %}<br /><small><i>updated: {{ chosen_repository.last_retrieval_time }}</i></small>{% endif %}
     </p>
 
 </div>
