place holder for months w/o milestones

--- a/milestone_reader/templates/milestones/view_by_column.html
+++ b/milestone_reader/templates/milestones/view_by_column.html
@@ -36,7 +36,11 @@
                    {% include "milestones/milestone_description.html" %}
 
                 {% empty %}
-                   &nbsp;
+                    {# --- NO REPO MILESTONES FOR THIS MONTH --- #}
+                      <div class="well well-sm" style="background-color:#fff;color:#ccc;">
+                          <small><i>No milestones this month</i></small>
+                      </div>
+
                 {% endfor %}
             </td>
         {% endfor %}
