--- a/milestone_reader/templates/base.html
+++ b/milestone_reader/templates/base.html
@@ -9,11 +9,18 @@
 
     <!-- Le styles -->
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
+    <script src="{{ STATIC_URL }}js/jquery-1.11.1.min.js"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
+    
     <style>
       body {
     /*    padding-top: 60px;/* /* 60px to make the container go all the way to the bottom of the topbar */
         
       }
+      div.panel-heading{padding:8px;}
+      div.panel-body{padding:10px;}
+      .popover-title{ color: #333;}
+      .popover-content{ color: #333; font-weight:normal; font-size:110%; line-height:150%;}
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -27,6 +34,13 @@
     <!-- Use this to quickly test CSS changes in a template,
         then move to milestone_reader.css -->
     {% block extra_css %}{% endblock %}
+    <script>
+        $( document ).ready(function() {
+            //$('[data-toggle="tooltip"]').tooltip({'placement': 'top'});
+            $('[data-toggle="popover"]').popover({trigger: 'hover','placement': 'top'});
+        });
+        
+    </script>
   </head>
 
   <body>
