--- a/milestone_reader/templates/base_navbar.html
+++ b/milestone_reader/templates/base_navbar.html
@@ -1,21 +1,9 @@
+
+{% comment %}{% endcomment %}
 <div class="navbar navbar-inverse navbar-fixed-top">
-     <div class="container">
-       <div class="navbar-header">
-         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-           <span class="icon-bar"></span>
-         </button>
-         <a class="navbar-brand" href="#">Milestone Reader</a>
-       </div>
-       <div class="collapse navbar-collapse">
-         <ul class="nav navbar-nav">
-             <!--
-           <li class="active"><a href="#">Home</a></li>
-           <li><a href="#about">About</a></li>
-           <li><a href="#contact">Contact</a></li>
-           -->
-         </ul>
-       </div><!--/.nav-collapse -->
-     </div>
+   <div class="container">
+         <a class="navbar-brand" href="#"><img src="http://datascience.iq.harvard.edu/profiles/openscholar/themes/hwpi_basetheme/images/harvard-logo.png" alt="Harvard University" /></a>
    </div>
+</div>
+
+
