--- a/milestone_reader/templates/milestones/milestone_column_content.html
+++ b/milestone_reader/templates/milestones/milestone_column_content.html
@@ -1,3 +1,21 @@
+<table class="table table-condensed" id="mstone_table">
+    <thead>
+        <tr>
+            {% if is_milestone_history %}
+            <th style="font-weight:normal"><a href="{% url 'view_by_columns' %}">(current milestones)</a></th>
+            {% else %}
+            <th style="font-weight:normal"><a href="{% url 'view_milestone_history' %}">(milestone history)</a></th>            
+            {% endif %}
+            {% for repo in sorted_repos %}
+             <th><a class="btn btn-primary btn-default" href="{% url 'view_single_repo_column' repo.github_name %}" data-toggle="popoverb" title="{{ repo }}" data-content-target="#repo-desc-{{ repo.id }}">{{ repo }}</a>
+            {# <!-- hidden div with repository description.  shown when hovering over repo name--> #} 
+            <div id="repo-desc-{{ repo.id }}" class="hide">{{ repo.description|linebreaksbr }}</div>   
+             </th>
+             
+             
+            {% endfor %}
+        </tr>
+    </thead>
 {% for org_month in organized_months %}
 <tr>
     {% for month_milestone_info in org_month %}
@@ -7,7 +25,6 @@
                     {% if month_milestone_info.month == NO_DUE_DATE %}
                     <span class="label label-primary">no due date</span>
                 {% else %}
-                    {#<span class="label label-primary">{{ month_milestone_info.month|date:"M Y" }}</span>#}
                     <div class="alert alert-info" role="alert">{{ month_milestone_info.month|date:"M Y" }}</div>
                 {% endif %}
                 </div>
@@ -27,3 +44,4 @@
     {% endfor %}
 </tr>
 {% endfor %}
+</table>
