updates for header

--- a/milestone_reader/templates/base_navbar.html
+++ b/milestone_reader/templates/base_navbar.html
@@ -1,9 +1,25 @@
 
-{% comment %}{% endcomment %}
+{#<div class="fluid-container" style="background-color:#1e1e1e;">#}
+<div class="navbar navbar-inverse navbar-fixed-top" style="min-height:32px;background-color:#1e1e1e;">
+        <div class="container">
+            <div class="row">
+                  <div class="col-md-6"><a href="http://www.harvard.edu"><img src="{{ STATIC_URL }}images/harvard-logo.png" alt="Harvard University" height="32" style="border:none;" /></a></div>
+              </div>
+        </div>
+    </div>   
+<div class="fluid-container" style="background-color:#eee; border-bottom:2px solid #ccc;">
+    <div class="container">
+        <div class="row">
+              <div class="col-md-6"><a href="http://datascience.iq.harvard.edu/" id="title-link"><h4>Data Science:<br /><span style="font-size:80%; font-weight:normal;font-style:italic;"> Research Frameworks for Data-Intensive Science,<br /> Analytical Tools and Data Stewardship</span></h4></a></div>
+              <div class="col-md-6 text-right"><a href="http://www.iq.harvard.edu/"><img src="http://static.projects.iq.harvard.edu/files/styles/os_files_small/public/datascience/files/iqsslogo-w_hu-large1.png?itok=jD1krrEU" alt="IQSS" /></a></div>
+          </div>
+    </div>
+</div>
+{% comment %}
 <div class="navbar navbar-inverse navbar-fixed-top">
    <div class="container">
          <a class="navbar-brand" href="#"><img src="http://datascience.iq.harvard.edu/profiles/openscholar/themes/hwpi_basetheme/images/harvard-logo.png" alt="Harvard University" /></a>
    </div>
 </div>
-
+{% endcomment %}
 
