--- a/milestone_reader/templates/base.html
+++ b/milestone_reader/templates/base.html
@@ -53,10 +53,9 @@
 
       {% block content %}
       <div class="well">
-          Sample Milestone View
         <ul>
            {# <li><a href="{% url 'view_by_due_date' %}">by Due Date</a></li>#}
-            <li><a href="{% url 'view_by_columns' %}">Milestone Roadmap</a></li>
+            <li><a href="{% url 'view_by_columns' %}">View Milestone Roadmap</a></li>
         </ul>
       </div>
       {% endblock %}
