update iqss image

--- a/milestone_reader/templates/base_navbar.html
+++ b/milestone_reader/templates/base_navbar.html
@@ -10,12 +10,13 @@
 <div class="fluid-container" style="background-color:#eee; border-bottom:2px solid #ccc;">
     <div class="container">
         <div class="row" style="padding:5px 0;">
-              <div class="col-md-6"><a href="http://datascience.iq.harvard.edu/" id="title-link"><img src="{{ STATIC_URL }}images/data-science2.png" alt="Data Science: Research Frameworks for Data-Intensive Science, Analytical Tools and Data Stewardship"></a></div>
-              {#<div class="col-md-6"><a href="http://datascience.iq.harvard.edu/" id="title-link"><h4>Data Science:<br /><span style="font-size:80%; font-weight:normal;font-style:italic;"> Research Frameworks for Data-Intensive Science,<br /> Analytical Tools and Data Stewardship</span></h4></a></div>#}
-              
-              
-              <div class="col-md-6 text-right"><a href="http://www.iq.harvard.edu/"><img src="http://static.projects.iq.harvard.edu/files/styles/os_files_small/public/datascience/files/iqsslogo-w_hu-large1.png?itok=jD1krrEU" alt="IQSS" /></a></div>
+              <div class="col-md-6"><a href="http://datascience.iq.harvard.edu/" id="title-link"><img src="{{ STATIC_URL }}images/data-science2.png" style="border:none;" alt="Data Science: Research Frameworks for Data-Intensive Science, Analytical Tools and Data Stewardship"></a></div>
+              <div class="col-md-6 text-right"><a href="http://www.iq.harvard.edu/"><img src="{{ STATIC_URL }}images/iqsslogo-2014.png" alt="The Institute for Quantitative Social Science" width="200" style="padding-top:8px; border:none;" /></a></div>
           </div>
+          {#<div class="col-md-6"><a href="http://datascience.iq.harvard.edu/" id="title-link"><h4>Data Science:<br /><span style="font-size:80%; font-weight:normal;font-style:italic;"> Research Frameworks for Data-Intensive Science,<br /> Analytical Tools and Data Stewardship</span></h4></a></div>#}
+          
+          {#<div class="col-md-6 text-right"><a href="http://www.iq.harvard.edu/"><img src="http://static.projects.iq.harvard.edu/files/styles/os_files_small/public/datascience/files/iqsslogo-w_hu-large1.png?itok=jD1krrEU" alt="IQSS" /></a></div>#}
+          
     </div>
 </div>
 {% comment %}
